# program_writing_assistant

./: 404.html  index.html  main.py  mkdocs.yml  pyproject.toml
src/program_writing_assistant/: core.py
src/program_writing_assistant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
