[project]
name = "program-writing-assistant"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "llmada>=1.0.5",
 "toml==0.10.2",
]

[tool.setuptools.package-data]
program_writing_assistant = [ "config.yaml",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
